# ringaug

./: .gitignore  LICENSE  README.md  cap_evaluator.py  coco_to_labelme.py  main.py  pyproject.toml  run_augmentation.bat  run_cap_evaluator.bat
.github/workflows/: ci.yml  publish.yml  smoke.yml
roboflow/cap_evaluation/: final_results.txt
roboflow/coco_json/: _annotations.coco.json
roboflow/json/: TE_C_00006_png.rf.34e5e88541409c5b0147bb4fdc60bf57.json  TE_C_00006_png.rf.530ebfcc7e90860aadac0a81a1c2632a.json  TE_C_00006_png.rf.5db28abbb0bdad0e49fa58069e1713c8.json  TE_C_00012_png.rf.3390c26d23d5dfe05cbb19c8b9d5fb3b.json  TE_C_00012_png.rf.e818c5b06a8773319ff4ef540498bb4f.json  TE_C_00012_png.rf.f1224e78cb4df8c59b8e82e9f0bf589f.json  TE_D_00025_png.rf.2a462dae36546d47e31d8425ca709dde.json  TE_D_00025_png.rf.93cfdc83c5abebdf7a4cd3b1776e9bb3.json  TE_D_00025_png.rf.d2e2af631452f8c281645eb31525f546.json  TE_D_00030_png.rf.34cb7fc9a97fb14bdea598dd975d126b.json  TE_D_00030_png.rf.52f0d54ef8e65aa982696f01f479af21.json  TE_D_00030_png.rf.63f3e58b4babd2662edf9003a63bdd10.json  TE_D_00039_png.rf.10d1b35c35ff452b749bfce6d9dfeec8.json  TE_D_00039_png.rf.301a23b22d94e0817785bd2577615b75.json  TE_D_00039_png.rf.7c98fca6594e643e0995e1e72c48f23d.json  TE_D_00040_png.rf.73b9eda52b55d17ab8926969b94d209f.json  TE_D_00040_png.rf.7c9d142a22708e3dc64d57ed90e59e77.json  TE_D_00040_png.rf.8e534dc8582f6b4750a6af317d60282d.json  TE_D_00051_png.rf.79a339603589aecc2a43fbd6dd1378f9.json  (+2 more)
seg-topo-augment/: polygon_to_aug_original.py
src/: __init__.py
tests/: test_imports.py
(+110 files in other folders)
