[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ringaug"
version = "0.1.0"
description = "Polygon topology augmentation CLI for LabelMe datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.1",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
]

[project.scripts]
ringaug = "ringaug.cli:main"
rinaug = "ringaug.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ringaug*"]
